Fix mvn compile.